<resources>
    <string name="app_name">ProjetoAluno</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="curso">Curso</string>
    <string name="horas">Carga Horaria</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="excluir">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
</resources>